--- a/settings.gradle
+++ b/settings.gradle
@@ -2,3 +2,4 @@ rootProject.name = 'kodila-course'
 include 'kodilla-testing'
 include 'kodilla-stream'
 include 'kodilla-exception'
+include 'kodilla-good-patterns'
