--- a/settings.gradle
+++ b/settings.gradle
@@ -9,3 +9,5 @@ include 'kodilla-spring-web'
 include 'kodilla-patterns'
 include 'kodila-jbc'
 include 'kodilla-hibernate'
+include 'kodilla-pattern2'
+
