--- a/kodilla-testing/build.gradle
+++ b/kodilla-testing/build.gradle
@@ -19,6 +19,7 @@ springBoot {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.openqa.selenium:selenium-rc:1.0-20081010.060147'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
