--- a/kodila-jbc/build.gradle
+++ b/kodila-jbc/build.gradle
@@ -10,6 +10,7 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.openqa.selenium:selenium-rc:1.0-20081010.060147'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
     testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '3.10.0'
