--- a/kodilla-good-patterns/build.gradle
+++ b/kodilla-good-patterns/build.gradle
@@ -14,6 +14,7 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.openqa.selenium:selenium-rc:1.0-20081010.060147'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
