--- a/kodilla-stream/build.gradle
+++ b/kodilla-stream/build.gradle
@@ -14,6 +14,7 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.openqa.selenium:selenium-rc:1.0-20081010.060147'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '3.10.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
