--- a/kodilla-testing2/build.gradle
+++ b/kodilla-testing2/build.gradle
@@ -11,9 +11,9 @@ repositories {
 
 dependencies {
     implementation 'org.openqa.selenium:selenium-rc:1.0-20081010.060147'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
-    testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '3.10.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
+    implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '2.41.0'
 }
 
 test {
